frontend/core/src/main/webapp/static/less/layout.less
/* ... */
.container-menu--bottom, .container-menu--push {
  height: @height-menu-footer;
}

// 1. Center vertically. See http://css-tricks.com/centering-css-complete-guide/#vertical-block-known
// 2. Set default max-height
// 3. Set white background to hide stuff below.
.container-modal {
  position: absolute;                   // [1]
  top: 50%;                             // [1]
  -webkit-transform: translateY(-50%);  // [1]
  -moz-transform: translateY(-50%);     // [1]
  -o-transform: translateY(-50%);       // [1]
  -ms-transform: translateY(-50%);      // [1]
  transform: translateY(-50%);          // [1]
  width: 100%;
  .center-horizontally-absolute();
  background-color: white;  // [3]
  .container-content {
    height: auto;
    max-height: 60vh; // [2]
  }
}

@large-screen-width-modal: 350px;
@large-screen-height-modal: 400px;

/*
Vertically center .container-master and .container-editor in large screens
*/
// 1. Set maximum dimensions for modal.
@media (min-height: @height-landscape-max) {
  .container-master,
  .container-editor {
    margin-top: -@height-landscape-max / 2;
    top: 50%;
  }
  .container-modal {
    max-height: @large-screen-height-modal; // [1]
  }
}

@media (min-width: @width-column-max) {
  .container-modal {
    max-width: @large-screen-width-modal;   // [1]
  }
}

/*
**************************************************************************
# LEVEL 4: Fluid, toaster
*/
// 1. Match with .container-toolbar.
@height-footer: 62px; // [1]
@height-footer-short: @grid-vertical;

/*
`.container-fluid` sets the vertical positioning of the content area.
*/
.container-fluid {
  // FIXME: is this needed?
  .center-horizontally;
  // FIXME: is this needed?
}

// Fluid container height.
//
// Sources:
// http://stackoverflow.com/a/15933376
// http://stackoverflow.com/a/12255692
// http://pixelsvsbytes.com/blog/2011/09/sticky-css-footers-the-flexible-way/
//
// 1. Fixes width calculation with swiper inside. See: http://stackoverflow.com/a/19835024
// 2. Inherit height for display: table.
// 3. Set width for display: table
.container-fluid {
  display: table;
  table-layout: fixed;  /* [1] */
  height: inherit;      /* [2] */
  width: 100%;          /* [3] */
}

// 1. Fluid container height.
// 2. Inherit height because parent uses display: table
// 3. Default bottom padding to make room for footer. NOTE: Override programmatically if footer height is different.
.container-fluid--inner {
  display: table-cell;            // [1]
  height: inherit;                // [1,2]
  padding-bottom: @height-footer; // [3]
}

// 1. Clear padding-bottom for footer from fluid container in editor.
//    Padding-bottom is set programmatically in editor into .content-container.
.container-editor .container-fluid--inner {
  padding-bottom: 0;  // [1]
}

// 3. Modal's bottom padding to make room for footer.
.container-modal .container-fluid--inner {
  padding-bottom: @height-footer-short;
}

// 1. Inherit width from parent. Elements inside swiper would otherwise be as wide as `.swiper-wrapper`.
.swiper-slide .container-content {
  width: inherit; /* [1] */
}

// 1. Make room for outer footer.
.container-editor--inner__outer {
  padding-bottom: @height-footer-short; // [1]
  .container-content--after.editor-footer {
    bottom: @height-footer-short; // [1]
  }
}

// 1. Define height.
// 2. Align horizontally.
// 3. Use same position as in .container-editor.
.container-editor--inner__after {
  height: @height-footer-short; // [1]
  background-color: @color-background-btn-active;
  max-width: @width-column-max;     // [2]
  .center-horizontally-absolute();  // [2]
  position: absolute; // [3]
}

// 1. Use same positioning as in swiper to make .container-content scrollable
//    Set left and right properties as well because .container-master, .container-editor and .container-modal
//    are absolutely positioned.
//    Set position to absolute to make .container-content--after visible.
//    See: http://www.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
.container-editor {
  .swiper-slide .container-content,
  .container-content--after {
    position: absolute; // [1]
    left: 0;            // [1]
    right: 0;           // [1]
  }
}

.container-master .swiper-slide {
  .container-content, .container-content--after {
    position: absolute; // [1]
    left: 0;            // [1]
    right: 0;           // [1]
  }
}

.container-modal .container-content--after {
  position: absolute; // [1]
  left: 0;            // [1]
  right: 0;           // [1]
}

// 1. .container-content--after inside swiper is absolutely positioned
//    so it needs to be positioned to the bottom of the content-container.
//    NOTE: Override programmatically if footer height is different.
//          See http://css-tricks.com/snippets/css/sticky-footer/
.container-master .container-content--after {
  bottom: -@height-footer;  // [1]
}

// 1. Footer with buttons is shorter.
.container-master .container-content--after.group-btn,
.container-modal .container-content--after.group-btn {
  height: @height-footer-short; // [1]
}

// 1. For inbox.
//    TODO: better comments
.container-master .container-fluid--inner > .container-content--after.group-btn {
  position: absolute; // [1]
  left: 0;            // [1]
  bottom: 0;          // [1]
  right: 0;           // [1]
}
/* ... */

